added the ability to filter data